Main sections added

--- a/doc/text.tex
+++ b/doc/text.tex
@@ -21,4 +21,9 @@
 \newpage{}
 \tableofcontents{}
 \newpage{}
+\section{Введение}
+\section{Раздел 1. Теоретическое введение}
+\section{Раздел 2. Численные эксперименты}
+\section{Заключение}
+\section{Список литературы}
 \end{document}
