Removed page number from title page

--- a/doc/text.tex
+++ b/doc/text.tex
@@ -8,6 +8,7 @@
 \usepackage{listings} % Source code formatting and highlighting
 
 \begin{document}
+\thispagestyle{empty}
 Московский Физико-Технический Институт \\
 Факультет Аэрофизики и Космических Исследований \\
 Кафедра Логистические Системы и Технологии \\
