Remove section numbers

--- a/doc/text.tex
+++ b/doc/text.tex
@@ -22,6 +22,8 @@
 \newpage{}
 \tableofcontents{}
 \newpage{}
+\renewcommand\thesection{}
+\renewcommand\thesubsection{}
 \section{Введение}
 \section{Раздел 1. Теоретическое введение}
 \section{Раздел 2. Численные эксперименты}
