Title page decorated

--- a/doc/text.tex
+++ b/doc/text.tex
@@ -9,16 +9,31 @@
 
 \begin{document}
 \thispagestyle{empty}
-Московский Физико-Технический Институт \\
-Факультет Аэрофизики и Космических Исследований \\
-Кафедра Логистические Системы и Технологии \\
-КУЗЬМИНА Антонина Ильинична \\
-Дипломная работа \\
-Математическое моделирование конвейера принятия торговых решений трейдером фондовой биржи с использованием алгоритма динамического искажения времени \\
-ДИПЛОМНАЯ РАБОТА \\
-Научный руководитель: \\
-\\
+\begin{center}
+Московский Физико-Технический Институт
+
+Факультет Аэрофизики и Космических Исследований
+
+Кафедра Логистические Системы и Технологии
+
+\parskip=100pt
+КУЗЬМИНА Антонина Ильинична
+\parskip=30pt
+
+Математическое моделирование конвейера принятия торговых решений трейдером фондовой биржи с использованием алгоритма динамического искажения времени
+
+ДИПЛОМНАЯ РАБОТА
+\end{center}
+
+\begin{flushright}
+\parskip=50pt
+Научный руководитель:
+\end{flushright}
+
+\vspace{\fill}
+\begin{center}
 Москва, 2016
+\end{center}
 \newpage{}
 \tableofcontents{}
 \newpage{}
