More decoration of title page

--- a/doc/text.tex
+++ b/doc/text.tex
@@ -1,4 +1,5 @@
-\documentclass{article}
+\documentclass[12pt]{article}
+\renewcommand{\baselinestretch}{1.5}
 
 \usepackage{amsmath} % Advanced math typesetting
 \usepackage[utf8]{inputenc} % Unicode support (Umlauts etc.)
@@ -10,17 +11,17 @@
 \begin{document}
 \thispagestyle{empty}
 \begin{center}
-Московский Физико-Технический Институт
+\small{Московский Физико-Технический Институт
 
 Факультет Аэрофизики и Космических Исследований
 
-Кафедра Логистические Системы и Технологии
+Кафедра Логистические Системы и Технологии}
 
-\parskip=100pt
+\parskip=80pt
 КУЗЬМИНА Антонина Ильинична
 \parskip=30pt
 
-Математическое моделирование конвейера принятия торговых решений трейдером фондовой биржи с использованием алгоритма динамического искажения времени
+\textbf{\large{Математическое моделирование конвейера принятия торговых решений трейдером фондовой биржи}}
 
 ДИПЛОМНАЯ РАБОТА
 \end{center}
