Subsections of theoretic section added

--- a/doc/text.tex
+++ b/doc/text.tex
@@ -40,9 +40,28 @@
 \newpage{}
 \renewcommand\thesection{}
 \renewcommand\thesubsection{}
+\renewcommand\thesubsubsection{}
 \section{Введение}
-\section{Раздел 1. Теоретическое введение}
-\section{Раздел 2. Численные эксперименты}
+\section{Раздел 1. Постановка задач}
+\subsection{1.1. Необходимые термины}
+\subsection{1.2. Этапы конвейера принятия решений трейдером фондовой биржи}
+\subsection{1.3. Постановка задач}
+\subsubsection{1.3.1. Задача поиска известного паттерна в истории котировок}
+\subsubsection{1.3.2. Задача кластеризации в пространстве фрагментов историй торгов}
+\subsubsection{1.3.3. Задача построения эффективной торговой стратегии}
+\section{Раздел 2. Теоретическое введение}
+\subsection{2.1. Алгоритм динамического искажения времени}
+\subsubsection{2.1.1. Базовый алгоритм динамического искажения времени}
+\subsubsection{2.1.2. Алгоритм derivative dynamic time warping}
+\subsubsection{2.1.3. Метрики расстояния}
+\newpage{}
+\subsection{2.2. Алгоритмы кластеризации}
+\subsubsection{2.2.1. Примеры задач кластеризации}
+\subsubsection{2.2.2. Эвристические графовые алгоритмы кластеризации}
+\subsubsection{2.2.3. Статистические алгоритмы кластеризации}
+\subsubsection{2.2.4. Алгоритмы иерархической кластеризации}
+\subsubsection{2.2.5. Самоорганизующиеся карты Кохонена}
+\section{Раздел 3. Численные эксперименты}
 \section{Заключение}
 \section{Список литературы}
 \end{document}
