--- a/doc/text.tex
+++ b/doc/text.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt]{article}
 \renewcommand{\baselinestretch}{1.5}
 
+\usepackage{indentfirst}
 \usepackage{amsmath} % Advanced math typesetting
 \usepackage[utf8]{inputenc} % Unicode support (Umlauts etc.)
 \usepackage[russian]{babel} % Change hyphenation rules
@@ -42,9 +43,63 @@
 \renewcommand\thesubsection{}
 \renewcommand\thesubsubsection{}
 \section{Введение}
+Объектом исследования в данной работе является конвейер принятия решений трейдером фондовой биржи.
+
+Основной целью данной работы является разработка математической модели конвейера принятия решений трейдером фондовой биржи, а также ее практическая реализация и проверка на реальных данных как всей моделирующей программы в целом, так и ее отдельных частей.
+
+Работа состоит из введения, трех глав, заключения и списка литературы.
+
+В первом разделе приведены экономические термины, необходимые для понимания работы, описаны этапы конвейера принятия решений трейдером фондовой биржи, а также приведена формальная постановка задач, рассматривающихся в работе.
+
+Второй раздел представляет собой теоретическое введение к описанию экспериментов, проведенных в рамках данной работы. В нем описаны алгоритмы, примененные при написании программы: алгоритм динамического искажения времени (а также его модификация, алгоритм derivative dynamic time warping, и используемые метрики расстояния в пространстве историй котировок) и алгоритмы кластеризации (эвристические, статистические и иерархические методы кластеризации, а также самоорганизующиеся карты Кохонена). Приведены основные теоремы, связанные с гарантиями сходимости используемых методов.
+
+В третьем разделе описываются результаты, полученные в ходе практической реализации алгоритмов и тестирования их на реальных исторических данных.
 \section{Раздел 1. Постановка задач}
 \subsection{1.1. Необходимые термины}
+Ниже приведены определения финансовых терминов, использующиеся в работе.
+
+{\it Актив} --- некоторая сущность, которая может быть куплена или продана в любой момент времени по цене, соответствующей этому моменту времени. Цены покупки и продажи актива в один и тот же момент времени не обязаны совпадать.
+
+{\it Тик} --- сделка купли-продажи, произошедшая на бирже. Характеризуется моментом времени, ценой и объемом. Объем сделки - количество элементарных единиц актива, которые были проданы продавцом и куплены покупателем.
+
+{\it Свеча} --- элемент данных, представляющий собой консолидированную информацию об изменении цены актива в некоторый промежуток времени. Как правило, свеча включает в себя 4 величины: цену открытия интервала (цена первого тика из временного интервала), цену закрытия (цена последнего тика из временного интервала), а также максимальную и минимальную цены тиков из рассматриваемого временного интервала. Нередко также в состав свечи включают общий объем всех сделок, произошедших в течение рассматриваемого промежутка времени, однако в данной работе эта величина не используется.
+
+{\it Торговая система} --- алгоритм, совершающий сделки на бирже по определенным математическим правилам. Может иметь параметры, влияющие на поведение системы.
+
+{\it Сделка покупки актива} --- сделка по покупке-продаже актива, в которой рассматриваемая торговая система выступает в качестве покупателя.
+
+{\it Сделка продажи актива} --- сделка по покупке-продаже актива, в которой рассматриваемая торговая система выступает в качестве продавца.
+
+{\it Закрытая сделка} --- пара сделок с совпадающими объемами, состоящая из сделки по покупке актива и сделки по продаже актива.
+
+{\it Ряд данных} --- последовательность данных о цене актива за определенный промежуток времени. Как правило, включает в себя информацию обо всех свечах этого актива за данный промежуток времени.
+
+{\it Прибыль закрытой сделки} --- разность цен сделок продажи и покупки этой закрытой сделки, умноженная на объем этих сделок.
+
+{\it Прибыль торговой системы за некоторый интервал времени.} Обозначим $n$ общее число закрытых сделок торговой системы за рассматриваемый период. Обозначим $p_i,~i=1,...,n$ прибыль $i-$ой закрытой сделки. Тогда прибылью торговой системы называется величина $profit=\sum\limits_{i=1}^n{p_i}$.
+
+{\it Просадка торговой системы за некоторый интервал времени.} Обозначим $n$ общее число закрытых сделок торговой системы за рассматриваемый период. Обозначим $p_i,~i=1,...,n$ прибыль $i-$ой закрытой сделки. Тогда просадкой торговой системы называется величина $$drawdown=\max\limits_{i=1,...,n}\left(\max\limits_{k=1,...,i}\sum\limits_{j=1}^kp_j - \sum\limits_{j=1}^ip_j\right)$$
+
+{\it Функционал качества торговой системы} --- некоторая функция, характеризующая качество торговой системы. Как правило, для ее вычисления используется последовательность закрытых сделок торговой системы. Типичные примеры функционала качества --- $profit$ и $profit/drawdown$.
 \subsection{1.2. Этапы конвейера принятия решений трейдером фондовой биржи}
+В данной работе рассматривается трейдер фондовой биржи, принимающий торговые решения на основе фигур технического анализа. Конвейер принятия решений в этом случае включает в себя следующие этапы:
+
+\begin{enumerate}
+\item Поиск закономерностей фондового рынка
+\begin{enumerate}
+\item Выделение типичных фигур технического анализа
+\item Определение информативности каждой фигуры технического анализа
+\end{enumerate}
+\item Создание торговой стратегии
+\begin{enumerate}
+\item Поиск фигур технического анализа в биржевых данных в режиме реального времени
+\item Принятие торгового решения и совершение сделки
+\item Оптимизация торговой стратегии
+\item Запуск автоматической торговой системы
+\end{enumerate}
+\end{enumerate}
+
+В данной работе рассматриваются все этапы этого конвейера, однако основное внимание уделяется трем задачам: задаче поиска известного паттерна в истории котировок, задаче кластеризации в пространстве фрагментов историй котировок и задаче автоматизированного построения эффективной торговой стратегии.
 \subsection{1.3. Постановка задач}
 \subsubsection{1.3.1. Задача поиска известного паттерна в истории котировок}
 \subsubsection{1.3.2. Задача кластеризации в пространстве фрагментов историй торгов}
@@ -62,6 +117,9 @@
 \subsubsection{2.2.4. Алгоритмы иерархической кластеризации}
 \subsubsection{2.2.5. Самоорганизующиеся карты Кохонена}
 \section{Раздел 3. Численные эксперименты}
+\subsection{3.1. Поиск паттерна в истории котировок}
+\subsection{3.2. Кластеризация фрагментов историй котировок}
+\subsection{3.3. Построение полностью автоматизированной торговой стратегии}
 \section{Заключение}
 \section{Список литературы}
 \end{document}
