Sections renamed to chapters

--- a/doc/text.tex
+++ b/doc/text.tex
@@ -49,12 +49,12 @@
 
 Работа состоит из введения, трех глав, заключения и списка литературы.
 
-В первом разделе приведены экономические термины, необходимые для понимания работы, описаны этапы конвейера принятия решений трейдером фондовой биржи, а также приведена формальная постановка задач, рассматривающихся в работе.
+В первой главе приведены экономические термины, необходимые для понимания работы, описаны этапы конвейера принятия решений трейдером фондовой биржи, а также приведена формальная постановка задач, рассматривающихся в работе.
 
-Второй раздел представляет собой теоретическое введение к описанию экспериментов, проведенных в рамках данной работы. В нем описаны алгоритмы, примененные при написании программы: алгоритм динамического искажения времени (а также его модификация, алгоритм derivative dynamic time warping, и используемые метрики расстояния в пространстве историй котировок) и алгоритмы кластеризации (эвристические, статистические и иерархические методы кластеризации, а также самоорганизующиеся карты Кохонена). Приведены основные теоремы, связанные с гарантиями сходимости используемых методов.
+Вторая глава представляет собой теоретическое введение к описанию экспериментов, проведенных в рамках данной работы. В нем описаны алгоритмы, примененные при написании программы: алгоритм динамического искажения времени (а также его модификация, алгоритм derivative dynamic time warping, и используемые метрики расстояния в пространстве историй котировок) и алгоритмы кластеризации (эвристические, статистические и иерархические методы кластеризации, а также самоорганизующиеся карты Кохонена). Приведены основные теоремы, связанные с гарантиями сходимости используемых методов.
 
-В третьем разделе описываются результаты, полученные в ходе практической реализации алгоритмов и тестирования их на реальных исторических данных.
-\section{Раздел 1. Постановка задач}
+В третьей главе описываются результаты, полученные в ходе практической реализации алгоритмов и тестирования их на реальных исторических данных.
+\section{Глава 1. Постановка задач}
 \subsection{1.1. Необходимые термины}
 Ниже приведены определения финансовых терминов, использующиеся в работе.
 
@@ -104,7 +104,7 @@
 \subsubsection{1.3.1. Задача поиска известного паттерна в истории котировок}
 \subsubsection{1.3.2. Задача кластеризации в пространстве фрагментов историй торгов}
 \subsubsection{1.3.3. Задача построения эффективной торговой стратегии}
-\section{Раздел 2. Теоретическое введение}
+\section{Глава 2. Теоретическое введение}
 \subsection{2.1. Алгоритм динамического искажения времени}
 \subsubsection{2.1.1. Базовый алгоритм динамического искажения времени}
 \subsubsection{2.1.2. Алгоритм derivative dynamic time warping}
@@ -116,7 +116,7 @@
 \subsubsection{2.2.3. Статистические алгоритмы кластеризации}
 \subsubsection{2.2.4. Алгоритмы иерархической кластеризации}
 \subsubsection{2.2.5. Самоорганизующиеся карты Кохонена}
-\section{Раздел 3. Численные эксперименты}
+\section{Глава 3. Численные эксперименты}
 \subsection{3.1. Поиск паттерна в истории котировок}
 \subsection{3.2. Кластеризация фрагментов историй котировок}
 \subsection{3.3. Построение полностью автоматизированной торговой стратегии}
