MIPT name changed

--- a/doc/text.tex
+++ b/doc/text.tex
@@ -12,7 +12,7 @@
 \begin{document}
 \thispagestyle{empty}
 \begin{center}
-\small{Московский Физико-Технический Институт
+\small{Федеральное государственное автономное образовательное учреждение высшего профессионального образования \\ «Московский физико-технический институт (государственный университет)»
 
 Факультет Аэрофизики и Космических Исследований
 
