Этот комментарий удалить. Тося

--- a/doc/text.tex
+++ b/doc/text.tex
@@ -43,9 +43,77 @@
 \renewcommand\thesubsection{}
 \renewcommand\thesubsubsection{}
 \section{Введение}
+В последнее время большое количество людей занимается торговлей на бирже — по
+некоторым оценкам, около 800 тысяч человек. О популярности этой сферы деятельности
+свидетельствует также и объем торгов на московской бирже, растущий день ото дня и
+составивший 4.65 трлн рублей 16 декабря 2014 года.
+
+В то же время, игра на бирже является очень рискованным видом деятельности — до 80%
+участников торгов терпят убытки. Поэтому трейдер никогда не принимает решений по
+наитию, а всегда использует холодный расчет. Вследствие этого, как правило, большинство
+торговых стратегий довольно легко формализуемы.
+
+Автоматические торговые системы имеют большое количество преимуществ по сравнению с
+трейдером-человеком. Самые значительные из них заключаются в следующем:
+
+\begin{itemize}
+\item Торговый робот может торговать круглосуточно, не отвлекаясь на еду и сон.
+\item Торговый робот не отнимает ценное время человека — можно запустить
+одновременно несколько роботов и, в то же время, заниматься созданием новых
+стратегий.
+\item Торговый робот принимает все решения в строгом соответствии с логикой алгоритма,
+он готов терпеть просадки и не берет на себя лишний риск, что очень важно в
+условиях высоковолатильного рынка.
+\item Торговый робот способен принимать решения гораздо быстрее любого человека —
+если трейдеру для совершения сделки требуется не менее 0.5 секунды, робот способен
+совершить сделку уже через 2-3 мкс.
+\end{itemize}
+
 Объектом исследования в данной работе является конвейер принятия решений трейдером фондовой биржи.
 
 Основной целью данной работы является разработка математической модели конвейера принятия решений трейдером фондовой биржи, а также ее практическая реализация и проверка на реальных данных как всей моделирующей программы в целом, так и ее отдельных частей.
+
+Для достижения цели настоящей работы поставлены следующие задачи:
+
+\begin{itemize}
+\item Исследование существующих методов моделирования работы трейдера.
+\item Исследование существующих открытых источников финансовой информации
+(котировок различных активов, а также торговых индикаторов) и принятие решения.
+об использовании этих данных для построения и тестирования модели конвейера принятия торговых решений трейдером фондовой биржи
+\item Исследование существующих открытых источников информации о фигурах технического анализа для использования этих данных при построении модели.
+\item Изучение существующей научной литературы по вопросу поиска известных паттернов в истории котировок финансовых инструментов.
+\item Выбор метрик расстояния между свечами для использования при реализации алгоритма динамического искажения времени.
+\item Реализация алгоритма динамического искажения времени для поиска известного паттерна в истории котировок торгового инструмента в среде программирования Microsoft Visual Studio с использованием языка программирования C\#.
+\item Тестирование программы поиска известного паттерна в истории котировок торгового инструмента на реальных исторических данных с использованием методов модульного и функционального тестирования.
+\item Определение качества работы программы поиска известного паттерна на реальных исторических данных посредством проведения слепого исследования, а также сравнение достигнутого уровня качества работы при использовании различных метрик расстояния.
+\item Изучение существующих методов кластерного анализа.
+\item Реализация различных методов кластеризации для поиска новых паттернов в истории котировок финансовых инструментов в среде программирования Microsoft Visual Studio с использованием языка программирования C\#.
+\item Тестирование программы поиска новых паттернов в истории котировок торгового инструмента с применением алгоритмов кластеризации на реальных исторических данных с использованием методов модульного и функционального тестирования.
+\item Определение качества работы программы поиска новых паттернов в истории котировок торгового инструмента с применением алгоритмов кластеризации на реальных исторических данных посредством проведения слепого исследования, а также сравнение качества работы различных методов кластеризации между собой.
+\item Реализация торговой системы, основанной на использовании найденных фигур технического анализа, в среде программирования Microsoft Visual Studio с использованием языка программирования C\#.
+\item Тестирование торговой системы, основанной на использовании найденных фигур технического анализа, на реальных исторических данных и определение важнейших параметров этой торговой системы (прибыль, просадка и тд.).
+\item Реализация алгоритма-советника для торговой платформы MetaTrader для проверки
+торговой системы на демо-счете в режиме реального времени.
+\end{itemize}
+
+Теоретической основой исследования явились положения и концепции, представленные в
+работах отечественных и зарубежных авторов по проблемам:
+
+\begin{itemize}
+\item Численной оптимизации.
+\item Поиска паттернов во временных рядах.
+\item Алгоритма динамического искажения времени.
+\item Классической и вероятностной постановки задач машинного обучения.
+\item Эвристических, статистических и иерархических методов кластеризации, в том числе, с использованием нейронных сетей.
+\item Переобучения и мультиколлинеарности, а также методам борьбы с этими проблемами:
+регуляризации, выделению главных компонент и др.
+\item Сравнения качества работы различных алгоритмов машинного обучения.
+\item Технического анализа.
+\end{itemize}
+
+Вопросы, рассматриваемые в данной работе, нашли отражение в трудах таких классических авторов, как Колмогоров, Вапник, Червоненкис, Закс и Стоун.
+
+Среди современных ученых схожими проблемами занимаются Воронцов, Горбань, Халл, Алексис, Бушерон, Тибширани, Руммельхарт, Носедал, Райт, Куликов.
 
 Работа состоит из введения, трех глав, заключения и списка литературы.
 
